chore: annotate node version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "book-list-app",
   "version": "0.0.0",
+  "engine": {
+    "node": "v16.10.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
